[workspace]
resolver = "2"
members = [
    "vine",
    "vine-core",
    "vine-macros",
    "vine-axum",
    "vine-axum-macros",
]
default-members = ["vine", "vine-*"]

[workspace.package]
version = "0.1.5-dev.4"
license = "Apache-2.0"
authors = ["zammr"]
repository = "https://github.com/zammr/vine"
