[package]
name = "vine-axum-macros"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
vine-axum-macros contains macros for simpler integration with axum framework
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.100", features = ["full"] }
quote = { version = "1.0.40" }
proc-macro2 = { version = "1.0.94" }