[package]
name = "vine-axum-macros"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
vine-axum-macros contains macros for simpler integration with axum framework
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
quote = { version = "1.0.41" }
proc-macro2 = { version = "1.0.101" }
prettyplease = "0.2.37"