[package]
name = "vine-axum"
version = "0.1.4-dev.6"
edition = "2021"

license = "Apache-2.0"
description = """
vine-axum is module which helps with integration of axum to vine framework
"""

[dependencies]
log = { version = "0.4.22" }
vine-core = { version = "0.1.4-dev.2" }
linkme = { version = "0.3.27"}

axum = "0.7.5"
dashmap = { version = "6.0.1" }
tokio = { version = "1.39.2", features = ["net"] }
async-trait = { version = "0.1.81" }
