[package]
name = "vine-axum"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
vine-axum is module which helps with integration of axum to vine framework
"""

[dependencies]
log = { version = "0.4.22" }
dashmap = { version = "6.0.1" }
vine-core = { version = "0.1.4" }

axum = "0.8.1"
tokio = { version = "1.39.2", features = ["net"] }
async-trait = { version = "0.1.81" }
linkme = { version = "0.3.27"}
