[package]
name = "vine-core"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
Vine Core implement core concepts of vine framework.
"""

[dependencies]
log = { version = "0.4.22" }
dashmap = { version = "6.0.1" }

tokio = { version = "1.40.0", features = ["full"] }

lazy_static = { version = "1.5.0" }
async-trait = { version = "0.1.81" }
linkme = { version = "0.3.27"}

log4rs = { version = "1.3.0", features = ["console_writer"]}
config = { version = "0.14.0", features = ["yaml"] }
regex = { version = "1.10.6" }