[package]
name = "vine-core"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
Vine Core implement core concepts of vine framework.
"""

[dependencies]
log = { version = "0.4.27" }
dashmap = { version = "6.1.0" }

tokio = { version = "1.44.1", features = ["full"] }

lazy_static = { version = "1.5.0" }
async-trait = { version = "0.1.88" }
linkme = { version = "0.3.32"}
serde = { version = "1.0.219" }
serde_json = { version = "1.0.105" }

log4rs = { version = "1.3.0", features = ["console_writer"]}
config = { version = "0.15.11", features = ["yaml"] }
regex = { version = "1.11.1" }