[package]
name = "vine-core"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
Vine Core implement core concepts of vine framework.
"""

[dependencies]
log = { version = "0.4.28" }
dashmap = { version = "6.1.0" }

tokio = { version = "1.47.1", features = ["full"] }

lazy_static = { version = "1.5.0" }
async-trait = { version = "0.1.89" }
linkme = { version = "0.3.35"}
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }

log4rs = { version = "1.4.0", features = ["console_writer"]}
config = { version = "0.15.18", features = ["yaml"] }
regex = { version = "1.11.3" }