[package]
name = "vine-macros"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
Vine Macros contains macros
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.100", features = ["full"] }
quote = { version = "1.0.40" }
proc-macro2 = { version = "1.0.94" }