[package]
name = "vine"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
Vine is rust framework inspired by Spring Boot
"""

[features]
default = [
    "vine-core",
    "vine-macros",
    "vine-axum",
    "vine-axum-macros"
]

[dependencies]
vine-core = { version = "0.1.4", optional = true }
vine-macros = { version = "0.1.4", optional = true }

vine-axum = { version = "0.1.4", optional = true }
vine-axum-macros = { version = "0.1.4", optional = true }

linkme = "0.3.28"
async-trait = "0.1.82"
config = "0.14.0"
