[package]
name = "vine"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
Vine is rust framework inspired by Spring Boot
"""

[features]
default = [
    "vine-core",
    "vine-macros",
    "vine-axum",
    "vine-axum-macros"
]

[dependencies]
vine-core = { path = "../vine-core", optional = true }
vine-macros = { path = "../vine-macros", optional = true }
vine-axum = { path = "../vine-axum", optional = true }
vine-axum-macros = { path = "../vine-axum-macros", optional = true }

linkme = "0.3.28"
async-trait = "0.1.82"
config = "0.15.8"
