[package]
name = "vine"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
Vine is rust framework inspired by Spring Boot
"""

[features]
default = [
    "vine-core",
    "vine-macros",
    "vine-axum",
    "vine-axum-macros"
]

[dependencies]
vine-core = { path = "../vine-core", version = "0.1.5-dev.4" , optional = true }
vine-macros = { path = "../vine-macros", version = "0.1.5-dev.4" , optional = true }
vine-axum = { path = "../vine-axum", version = "0.1.5-dev.4" , optional = true }
vine-axum-macros = { path = "../vine-axum-macros", version = "0.1.5-dev.4", optional = true }

linkme = "0.3.32"
async-trait = "0.1.88"
config = "0.15.11"
